--- a/Week9/Week9-V,Koppula.ipynb
+++ b/Week9/Week9-V,Koppula.ipynb
@@ -2164,17 +2164,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.750028</td>\n",
+       "      <td>0.126397</td>\n",
+       "      <td>0.001564</td>\n",
+       "      <td>0.033403</td>\n",
+       "      <td>0.021485</td>\n",
+       "      <td>0.067122</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4         5\n",
+       "0  0.750028  0.126397  0.001564  0.033403  0.021485  0.067122"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Predic"
+    "# Prediction\n",
+    "# Solution\n",
+    "\n",
+    "\n",
+    "columns = ['age_r', 'age2', 'race', 'totincr', 'educat']\n",
+    "new = pd.DataFrame([[25, 25**2, 2, 11, 12]], columns=columns)\n",
+    "results.predict(new)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "This person has a 75% chance of being currently married, a 13% chance of being \"not married but living with opposite sex partner\""
+   ]
   },
   {
    "cell_type": "code",
